[package]
name = "signer-proxy"
version = "1.0.1"
edition = "2024"

[dependencies]
axum = { version = "0.7.5", features = ["macros"] }
tokio = { version = "1.39.3", features = ["rt-multi-thread", "signal"] }
serde = { version = "1.0", features = ["derive"] }
serde_with = { version = "3.12.0", features = ["base64"] }
hex   = { version = "0.4", features = ["serde"] }
serde_json = "1.0"
structopt = "0.3"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
alloy = { git = "https://github.com/upnode-org/alloy", features = [
  "rlp",
  "rpc-types",
  "eips",
  "network",
  "signer-yubihsm",
  "signer-aws",
  "signers",
  "signer-local",
] }
yubihsm = { version = "0.42.1", features = ["secp256k1", "http", "usb"] }
anyhow = "1.0.86"
tower-http = { version = "0.5.2", features = ["timeout", "trace"] }
strum = { version = "0.26", features = ["derive"] }
aws-config = "1.5.5"
aws-sdk-kms = "1.40.0"

ethereum-types = {version = "0.15.1"}
[features]
default = ["mock"]
mock = ["yubihsm/mockhsm"]
